Fixed layout issues of top bar

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1718,7 +1718,6 @@ button.mdc-button.navbar-button {
 }
 
 .logo-image {
-    margin-top: 60px;
     width: 250px;
     height: 60px;
     background-repeat: no-repeat;
